# cpp-vines

./: .gitignore  CMakeLists.txt  License  README.md  prices.csv  pyproject.toml  vine-results.txt
examples/: vine-example.cpp
include/: asset.hpp  concordance.hpp  csv.hpp  ecdf.hpp  errors.hpp  optimiser.hpp  py-bridge.cpp  pybridge.cpp  series.hpp  stats.hpp  types.hpp
include/copulas/: base.hpp  clayton.hpp  guassian.hpp  gumbel.hpp  independence.hpp  studentt.hpp  survival.hpp
include/vine/: edge.hpp  graph.hpp  vine.hpp
python/examples/: backtest.ipynb  clayton.ipynb  helpers.py  vine.ipynb
python/vines/: __init__.py  __init__.pyi  _vines.pyi
tests/: copulas.cpp  csv.cpp  ecdf.cpp  graph.cpp  optimiser.cpp  series.cpp  stats.cpp  vine.cpp
